--- a/lista_mieszkan.html
+++ b/lista_mieszkan.html
@@ -338,7 +338,7 @@
                                 </tr>
                             </tfoot>
                         </table>
-                        <div class="contact-box">
+                        <div class="contact-box-content">
                             <h4 class="heading">Umów się na prezentację</h4>
                             <a href="tel:+48 666 350 646">+48 666 350 646&nbsp;/&nbsp;</a><a href="tel:71 333 21 99">71 333 21 99</a>
                             <a href="mailto:kierownik@as-hajto.pl" class="mail-link">kierownik@as-hajto.pl</a>
