--- a/aktualnosci.html
+++ b/aktualnosci.html
@@ -15,10 +15,9 @@
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-
         <link rel="stylesheet" href="css/owl.carousel.min.css">
-        <link rel="stylesheet" href="css/owl.theme.css">
         <link href="css/lightbox.min.css" rel="stylesheet">
+
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
@@ -89,7 +88,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 text-center">
+                <div class="col-xs-12 col-lg-offset-1 col-lg-10 text-center">
                     <div class="single-post__gallery">
                         <header class="header-page">
                             <h2 class="header-page__title">Galeria</h2>
@@ -102,7 +101,7 @@
                             <li><a href="items/bedroom.jpg" data-lightbox="roadtrip"><img src="items/bedroom.jpg" class="coverImage" alt=""></a></li>
                         </ul>
                     </div>
-                    <hr class="mark"> 
+                    <hr class="mark mark--custom"> 
                     <a href="lista_aktualnosci.html" class="main-link main-link--large"><span class="flaticon-arrows-2"></span>Wróć do listy</a>
                 </div>
             </div>
@@ -192,10 +191,9 @@
     <script src="js/vendor/bootstrap.min.js"></script>
 
     <script src="js/plugins.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/slider.js"></script>
+
     <script src="js/lightbox.min.js"></script>
-        <script>
+     <script>
         jQuery(function(){
           $("img.coverImage").cover();
         });
