--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
         <link rel="stylesheet" href="css/owl.carousel.min.css">
-        <link rel="stylesheet" href="css/owl.theme.css">
 
         <link rel="stylesheet" href="css/main.css">
 
@@ -240,7 +239,8 @@
     <script src="js/vendor/bootstrap.min.js"></script>
 
     <script src="js/plugins.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/slider.js"></script>
+
+    <script src="js/slider.min.js"></script>
+
     </body>
 </html>
