--- a/kontakt.html
+++ b/kontakt.html
@@ -17,7 +17,6 @@
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
         <link rel="stylesheet" href="css/owl.carousel.min.css">
-        <link rel="stylesheet" href="css/owl.theme.css">
         <link href="css/lightbox.min.css" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
 
@@ -128,7 +127,7 @@
                     </aside>
                 </div>
             </div>
-            <div class="row">
+            <div class="row second-address">
                 <div class="col-xs-12">
                     <header class="header-page">
                         <h3 class="header-page__title">Deweloper</h3>
@@ -247,11 +246,12 @@
     <script src="js/vendor/bootstrap.min.js"></script>
 
     <script src="js/plugins.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/slider.js"></script>
+    
+    <script src="js/slider.min.js"></script>
+
     <script src="js/lightbox.min.js"></script>
      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJa2bEsVAueGRBeMQ0iVKMjyIxbQyvDVM"></script>
-    <script src="js/maps-contact.js"></script>
+    <script src="js/map-contact.js"></script>
         <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.js"></script>
     <script>
         $("#contact_form").validate({
