--- a/lista_mieszkan.html
+++ b/lista_mieszkan.html
@@ -341,7 +341,7 @@
                             <h4 class="heading">Umów się na prezentację</h4>
                             <a href="tel:+48 666 350 646">+48 666 350 646&nbsp;/&nbsp;</a><a href="tel:71 333 21 99">71 333 21 99</a>
                             <a href="mailto:kierownik@as-hajto.pl" class="mail-link">kierownik@as-hajto.pl</a>
-                            <address class="contact-box__address">
+                            <address class="contact-box-content__address">
                                 <span>Biuro sprzedaży</span>
                                 <span>ul. Szczęśliwa 38A/1<br>53-418 Wrocław</span>
                             </address>
