--- a/lokalizacja.html
+++ b/lokalizacja.html
@@ -249,7 +249,7 @@
 
 
      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJa2bEsVAueGRBeMQ0iVKMjyIxbQyvDVM"></script>
-    <script src="js/maps.js"></script>
+    <script src="js/map-location.js"></script>
         <script>
         jQuery(function(){
           $("img.coverImage").cover();
