--- a/kontakt.html
+++ b/kontakt.html
@@ -67,7 +67,29 @@
                 <h1 class="header-page__title">Kontakt</h1>
             </header>
             <div class="row">
-                <div class="col-xs-12 col-sm-7 col-sm-push-5">
+                <div class="col-xs-12 col-sm-5">
+                    <aside class="aside-contact">
+                        <div class="contact-box contact-box--add-gutter">
+                            <span class="flaticon-technology-1"></span>
+                            <a href="tel:+48 666 350 646">+48 666 350 646</a>
+                            <a href="tel:71 333 21 99">71 333 21 99</a>
+                        </div>
+                        <div class="contact-box contact-box--add-gutter">
+                            <span class="flaticon-mail"></span>
+                            <a href="mailto:kierownik@as-hajto.pl" class="mail-link">kierownik@as-hajto.pl</a>
+                        </div>
+                        <div class="contact-box">
+                            <h3 class="content-heading">Biuro sprzedaży</h3>
+                            <address>
+                                <span>ul. Szczęśliwa 38A/1</span>
+                                <span>53-418 Wrocław</span>
+                                <span>Godziny pracy biura sprzedaży:</span>
+                                <span>pn.-pt.: 9.00 - 17.00</span>
+                            </address>
+                        </div>
+                    </aside>
+                </div>
+                <div class="col-xs-12 col-sm-7">
                     <div class="content-form">
                         <h2 class="content-heading">Formularz konatkowy</h2>
                         <form action="#" id="contact_form">
@@ -103,28 +125,6 @@
                             </div>
                         </form>
                     </div>
-                </div>
-                <div class="col-xs-12 col-sm-5 col-sm-pull-7">
-                    <aside class="aside-contact">
-                        <div class="contact-box contact-box--add-gutter">
-                            <span class="flaticon-technology-1"></span>
-                            <a href="tel:+48 666 350 646">+48 666 350 646</a>
-                            <a href="tel:71 333 21 99">71 333 21 99</a>
-                        </div>
-                        <div class="contact-box contact-box--add-gutter">
-                            <span class="flaticon-mail"></span>
-                            <a href="mailto:kierownik@as-hajto.pl" class="mail-link">kierownik@as-hajto.pl</a>
-                        </div>
-                        <div class="contact-box">
-                            <h3 class="content-heading">Biuro sprzedaży</h3>
-                            <address>
-                                <span>ul. Szczęśliwa 38A/1</span>
-                                <span>53-418 Wrocław</span>
-                                <span>Godziny pracy biura sprzedaży:</span>
-                                <span>pn.-pt.: 9.00 - 17.00</span>
-                            </address>
-                        </div>
-                    </aside>
                 </div>
             </div>
             <div class="row second-address">
