--- a/kontakt.html
+++ b/kontakt.html
@@ -66,7 +66,7 @@
             <header class="header-page">
                 <h1 class="header-page__title">Kontakt</h1>
             </header>
-            <div class="row">
+            <div class="row row-flex">
                 <div class="col-xs-12 col-sm-5">
                     <aside class="aside-contact">
                         <div class="contact-box contact-box--add-gutter">
@@ -89,7 +89,7 @@
                         </div>
                     </aside>
                 </div>
-                <div class="col-xs-12 col-sm-7">
+                <div class="col-xs-12 col-sm-7 order">
                     <div class="content-form">
                         <h2 class="content-heading">Formularz konatkowy</h2>
                         <form action="#" id="contact_form">
@@ -126,9 +126,7 @@
                         </form>
                     </div>
                 </div>
-            </div>
-            <div class="row second-address">
-                <div class="col-xs-12">
+                <div class="col-xs-12 second-address">
                     <header class="header-page">
                         <h3 class="header-page__title">Deweloper</h3>
                     </header>
