--- a/lista_mieszkan.html
+++ b/lista_mieszkan.html
@@ -71,7 +71,7 @@
                 <div class="col-xs-12">
                     <table class="table table-flat">
                         <tbody>
-                            <tr>
+                            <tr class="modal-open">
                                 <td class="desktop-title visible-sm visible-md visible-lg">
                                     <span class="point point-red"></span>
                                     <h2 class="title">Mieszkanie M1</h2>
@@ -112,9 +112,9 @@
                                 <td class="hidden-xs"><b>26,34 m2</b></td>
                                 <td class="hidden-xs">6 000zł</td>
                                 <td class="hidden-xs">2596, 203 zł</td>
-                                <td class="hidden-xs"><button type="button" class="main-link" id="modal-open">szczegóły</button></td>
+                                <td class="hidden-xs"><button type="button" class="main-link">szczegóły</button></td>
                             </tr>
-                            <tr>
+                            <tr class="modal-open">
                                 <td class="desktop-title visible-sm visible-md visible-lg">
                                     <span class="point point-green"></span>
                                     <h2 class="title">Mieszkanie M1<small class="extra">promocja</small></h2>
@@ -143,7 +143,7 @@
                                 <td class="hidden-xs">2596, 203 zł</td>
                                 <td class="hidden-xs"><button type="button" class="main-link">szczegóły</button></td>
                             </tr>
-                            <tr>
+                            <tr class="modal-open">
                                 <td class="desktop-title visible-sm visible-md visible-lg">
                                     <span class="point point-yellow"></span>
                                     <h2 class="title">Mieszkanie M1</h2>
